Minor copyedits + cutting old comments

--- a/2025/2025-04-27-wir.md
+++ b/2025/2025-04-27-wir.md
@@ -1,43 +1,12 @@
-<!--
-
-In this draft, final hed by me, based on earlier AI suggestions. Also ran final spell and grammar check with Copilot using this prompt:
-
-Copilot, could you check this newsletter draft for any spelling and grammar mistakes I might need to fix before publication? If you find any, make a bulleted list of them, please.
-
-Copilot's response:
-
-Here’s a bulleted list of potential spelling and grammar errors in the newsletter draft:
-
-- **"I highlight this because  I know"**: There is an extra space between "because" and "I". It should be: "I highlight this because I know".
-
-- **"Below are what I think are NotebookLM's journalism-specific strengths."**: Consider rephrasing for clarity. For example: "Here are what I consider NotebookLM's journalism-specific strengths."
-
-- **"could make a person more effect[ive]..."**: The word "effective" appears to be truncated or misspelled. It should be "effective".
-
-- **"being replaced by a[ ]AI."**: There is a missing space between "a" and "AI". It should be "an AI".
-
-- **"Bitcoin's valuation briefly surpassed that of Google's parent Alphabet."**: "Bitcoin's valuation" could be simplified to "Bitcoin briefly surpassed" for conciseness, but this is stylistic.
-
-- **"Funny enough, I must confess I only noticed this with some help from NotebookLM."**: Consider rephrasing to avoid "Funny enough" if aiming for a formal tone.
-
-- **"to cover specific tech events and developments coming up.  If you"**: There is an extra space after "coming up." It should be: "coming up. If you".
-
-- **"Both leading candidates for prime minister in Canada"**: Canada has a prime minister, not multiple candidates; consider rephrasing for clarity if discussing a specific context.
-
-Let me know if you'd like me to refine these further or assist with rephrasing other sections.
-
--->
-
 # The AI research assistant every reporter should try
 ## Google's NotebookLM stands apart for its journalism-specific strengths.
 
 ![Black-and-white photo illustration of a woman reading a newspaper](https://w3w.news/img/newsreader-illo-melpo-tsiliaki-DALLE3-1920.jpg)
-
 *Photo illustration by Melpo Tsiliaki × DALL·E 3*
 
 <hr>
 
-- _**I used NotebookLM, Leo/Llama 3.1, ChatGPT, Copilot, and DALL·E 3** to assist production of this edition of w3w. Final edit 100% by me. For full details, see the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub._ <!-- Editroster as needed. -->
+- _**I used NotebookLM, Leo/Llama 3.1, ChatGPT, Copilot, and DALL·E 3** to assist production of this edition of w3w. Final edit 100% by me. For full details, see the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub._ <!-- Edit listed AIs as needed before final publication. -->
 
 - _**A big thank-you** to the paid subscribers who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech re-shaping the web. To join them in supporting this work, check out our paid plans [on Substack](https://w3wnews.substack.com/subscribe)._
 
