--- a/2025/2025-05-04-wir.md
+++ b/2025/2025-05-04-wir.md
@@ -47,7 +47,12 @@
 
 - https://www.coindesk.com/business/2025/05/01/world-liberty-s-stablecoin-will-be-used-to-close-mgx-s-usd2b-binance-investment-eric-trump
 
+- https://www.politico.com/newsletters/digital-future-daily/2025/04/29/a-tech-law-just-passed-could-it-happen-again-00316428
+
+- https://www.eff.org/deeplinks/2025/04/congress-passes-take-it-down-act-despite-major-flaws
+
 ### Looking Ahead
+
 
 - De-dollarization? <!-- Recent JPM remark on it being more plausible post-tariffs. Coinbase analysts warn of a potential "crypto winter" due to the ongoing trade war and decreased investor confidence. Bitcoin's price is currently above its 200-day moving average, but has shown volatility in recent weeks. ([Decrypt](https://decrypt.co/315089/bitcoin-steadies-but-coinbase-analyst-sees-crypto-winter-tariffs)) -->
 
@@ -59,8 +64,8 @@
 
 ### Odds & Ends
 
-- https://www.salon.com/2025/05/03/george-carlin-warned-us-when-we-ban-words-we-surrender-freedom/
+- **"All is well with Journalism."** So declared the trainer of a three-year-old racehorse named Journalism in an interview [with the Wall Street Journal](https://www.wsj.com/sports/journalism-kentucky-derby-horse-racing-1b7c6b02?st=2ShcYJ&reflink=desktopwebshare_permalink) prior to Saturday's running of the Kentucky Derby. Unfortunately, Journalism finished TKTKTK in the prestigious race. <!-- Update copy and link after the derby -->
 
-- https://peteramckay.medium.com/the-fastest-hunk-o-junk-in-the-galaxy-58cb09646481
-
+- **Happy Star Wars Day!** In my opinion, the [new season of Andor]() on Disney+ is well worth a watch this "May the 4th." Will have to update my previously published [recommended viewing order](https://peteramckay.medium.com/the-fastest-hunk-o-junk-in-the-galaxy-58cb09646481) for Star Wars content to include it soon... Meanwhile, if you're looking for offline events to commemorate the "holiday," the Associated Press reports celebrations will be especially lit [in New Hope, Pennsylvania](https://apnews.com/article/star-wars-day-may-4th-holiday-ea1b5b43b00c23f53294dc159da2bae9).
+ 
 _**That's it for now. Thanks for reading the newsletter today! Best wishes for a healthy and productive week ahead.**_ 😊 <!-- Add link to "about" copy when it's ready. -->
