New items in "5 Things" drafted by Leo/Llama 3.1 +  writethroughs elsewhere by me

--- a/2025/2025-05-04-wir.md
+++ b/2025/2025-05-04-wir.md
@@ -1,3 +1,11 @@
+<!--
+
+Adding a couple of news items to "Five Things" section below, drafted by Leo/Llama 3.1 based on the following prompt...
+
+I'm thinking of using the news article in this browser tab in my upcoming newsletter, which contains a bulleted list summarizing important tech news each week. Could you please summarize this story in a paragraph of 1-2 sentences, written in a style that I could use for my newsletter? Please format your response as markdown, with the article hyperlink embedded somewhere in the text. No need for a headline.
+
+-->
+
 # tktk
 ## tktk
 
@@ -33,6 +41,10 @@
 
 *The week's top headlines about blockchain, AI, and other emerging technologies and trends re-shaping the web:*
 
+- Apple has revised its App Store guidelines to allow developers to include links to external payment methods, potentially paving the way for a new wave of crypto and NFT-related apps on the U.S. App Store. This change comes after a court ruling in favor of Epic Games, which had sued Apple over its commission fees on in-app purchases. ([The Block](https://www.theblock.co/post/353047/u-s-app-store-to-allow-apps-to-skirt-30-fee-on-nft-crypto-sales-following-apples-legal-defeat))
+
+- AdTech firm Thumzup Media Corporation is seeking to raise $200 million to bolster its bitcoin treasury, which currently holds around $1.8 million worth of bitcoin. This move is part of a growing trend of companies mirroring similar strategy-inspired plays, with Thumzup's market cap of around $48.5 million, as reported in a recent SEC filing, making it a notable example in the crypto space. ([The Block](https://www.theblock.co/post/353043/adtech-firm-thumzup-seeks-200-million-to-100x-size-of-bitcoin-treasury))
+
 - U.S. bank regulations on crypto relaxed. <!-- Link TK -->
 
 - 21Shares updates <!-- Link TK -->
@@ -64,8 +76,8 @@
 
 ### Odds & Ends
 
-- **"All is well with Journalism."** So declared the trainer of a three-year-old racehorse named Journalism in an interview [with the Wall Street Journal](https://www.wsj.com/sports/journalism-kentucky-derby-horse-racing-1b7c6b02?st=2ShcYJ&reflink=desktopwebshare_permalink) prior to Saturday's running of the Kentucky Derby. Unfortunately, Journalism finished TKTKTK in the prestigious race. <!-- Update copy and link after the derby -->
+- **"All is well with Journalism."** So declared the trainer of a three-year-old racehorse named Journalism in an interview [with the Wall Street Journal](https://www.wsj.com/sports/journalism-kentucky-derby-horse-racing-1b7c6b02?st=2ShcYJ&reflink=desktopwebshare_permalink) prior to Saturday's running of the Kentucky Derby. Journalism even went off as a 7-2 favorite to win the prestigious event. But then he [finished second](https://bleacherreport.com/articles/25192701-sovereignty-wins-2025-kentucky-derby-pulls-upset-favorite-journalism) to Sovereignty.
 
-- **Happy Star Wars Day!** In my opinion, the [new season of Andor]() on Disney+ is well worth a watch this "May the 4th." Will have to update my previously published [recommended viewing order](https://peteramckay.medium.com/the-fastest-hunk-o-junk-in-the-galaxy-58cb09646481) for Star Wars content to include it soon... Meanwhile, if you're looking for offline events to commemorate the "holiday," the Associated Press reports celebrations will be especially lit [in New Hope, Pennsylvania](https://apnews.com/article/star-wars-day-may-4th-holiday-ea1b5b43b00c23f53294dc159da2bae9).
- 
+- **Happy Star Wars Day!** In my opinion, the [new season of Andor](https://variety.com/2025/tv/reviews/andor-season-2-review-disney-star-wars-1236372979/) on Disney+ is well worth a watch this "May the 4th." Will have to update my previously published [recommended viewing order](https://peteramckay.medium.com/the-fastest-hunk-o-junk-in-the-galaxy-58cb09646481) for live-action Star Wars content to include it soon... Meanwhile, if you're still looking for offline events to commemorate the holiday, the Associated Press reports celebrations will be especially lit [in New Hope, Pennsylvania](https://apnews.com/article/star-wars-day-may-4th-holiday-ea1b5b43b00c23f53294dc159da2bae9) this year.
+
 _**That's it for now. Thanks for reading the newsletter today! Best wishes for a healthy and productive week ahead.**_ 😊 <!-- Add link to "about" copy when it's ready. -->
