--- a/2025/2025-05-04-wir.md
+++ b/2025/2025-05-04-wir.md
@@ -1,8 +1,8 @@
 <!--
 
-Adding a couple of news items to "Five Things" section below, drafted by Leo/Llama 3.1 based on the following prompt...
+Adding items to the "Five Things" below, drafted by NotebookLM based on the following prompt...
 
-I'm thinking of using the news article in this browser tab in my upcoming newsletter, which contains a bulleted list summarizing important tech news each week. Could you please summarize this story in a paragraph of 1-2 sentences, written in a style that I could use for my newsletter? Please format your response as markdown, with the article hyperlink embedded somewhere in the text. No need for a headline.
+Could you please summarize each news article saved as an url in your training data? Please output the summaries as a bulleted list in markdown. Each list item should be 1-2 sentences.
 
 -->
 
@@ -41,13 +41,49 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 
 *The week's top headlines about blockchain, AI, and other emerging technologies and trends re-shaping the web:*
 
+Here are summaries of the news articles and reports based on the provided excerpts:
+
+*   The excerpts from the MSNBC article titled "$TRUMP meme coin dinner brings crypto grift to the White House" list featured MSNBC shows and TV options but do not provide content from the article itself. Therefore, the main topic of the article cannot be summarized from these sources.
+*   The "2025-04-13-wir.md" newsletter details the author's adoption of a more structured and open AI-assisted workflow for production, including making the GitHub repository public for transparency and contributions. It also summarizes weekly tech news, covering topics such as a temporary pause on U.S. tariffs with the exception of China, concerns about U.S. tariff policy volatility, the disbanding of the DOJ's crypto enforcement team, Trump signing a crypto-related bill, the SEC dropping a case against Nova Labs, a potential Senate bill impacting data centers, and the White House's actions jeopardizing AI leadership.
+*   The "2025-04-20-wir.md" newsletter discusses the author's view that a recent market plunge easily constitutes a "crash," contrasting with a Wikipedia debate on terminology. It also reports on weekly tech headlines, including concerns about **AI-powered disinformation** networks like "Pravda", increased **antitrust scrutiny for Big Tech** firms like Google and Meta, **bullish investor sentiment for Bitcoin and Ethereum** leading to a rise in "bitcoin dominance", China selling seized tokens despite a ban while the **Trump administration explores buying Bitcoin for a national reserve**, and a projection for the stablecoin market to reach $2 trillion by 2028.
+*   The "2025-04-27-wir.md" newsletter highlights **Google's NotebookLM** as a particularly relevant **AI research assistant for journalists**, praising its familiarity, customizability, and transparency features. The newsletter also covers weekly tech news, noting **Bitcoin's brief surge past Alphabet's valuation**, ongoing Big Tech antitrust issues in court, the swearing-in of a **pro-crypto SEC chair Paul Atkins** replacing Gary Gensler, the increasing **intertwining of stablecoins with traditional banking**, and Newsweek's recent coverage of various real-life AI use cases.
+*   The POLITICO article titled "A tech law just passed. Could it happen again?" reports that Congress recently passed the **Take It Down Act**, which creates a federal mandate for tech platforms to **remove nonconsensual AI-generated porn**. The article suggests that passing tech legislation is rare in the current political climate and the success of the Take It Down Act was likely a "one-off" requiring a "perfect storm of circumstances".
+*   The Decrypt article titled "Amazon Begins Rolling Out Enhanced AI-Powered Alexa+ Assistant" details the rollout of Amazon's upgraded AI-powered assistant, noting incompatibility with some first-generation devices and delays in certain features. Alexa+ is **free for Amazon Prime members**, costs $19.99 monthly for others, includes privacy safety features, but currently does not allow users to delete uploaded documents.
+*   The CoinDesk article titled "Arizona Governor Calls Crypto an ‘Untested Investment,’ Striking Bitcoin Reserve Bill" reports that **Arizona Governor Katie Hobbs vetoed a bill** (Senate Bill 1025) that would have permitted the state to hold Bitcoin as part of its official reserves using seized funds. The governor referred to crypto as an "untested investment".
+*   The Decrypt article titled "Being Polite to ChatGPT is Pointless New Research Shows" discusses a new study by George Washington University researchers indicating that using polite words like "please" and "thank you" has a **negligible effect on AI response quality** for models like ChatGPT, contrary to earlier findings. The research suggests that the "Jekyll-and-Hyde tipping point" where AI outputs degrade depends on training and substantive prompt words, not courtesy, and relates to the model spreading its attention too thinly over longer responses.
+*   The excerpts from the Bitcoin Magazine source titled "Bitcoin Core Developer Sjors Provoost: Bitcoin Core The Project" provide context about the publication and navigation but contain no content from the interview or article discussing Sjors Provoost or the Bitcoin Core project. Therefore, the main topic of the article cannot be summarized from these sources.
+*   The Decrypt article titled "Brown University Bets on Bitcoin With Millions Worth of BlackRock ETF Shares" reports that **Brown University** has disclosed holding exposure to Bitcoin through its investment in **BlackRock's iShares Bitcoin Trust ETF (IBIT)**. As of March 31, the university held 105,000 shares, valued at nearly $5 million.
+*   The Electronic Frontier Foundation (EFF) article titled "Congress Passes TAKE IT DOWN Act Despite Major Flaws" critiques the recently passed Take It Down Act, arguing its takedown provision is too broad and lacks safeguards, likely leading to the removal of legal content due to reliance on automated filters and tight timeframes. EFF contends that this bill is the "wrong approach" to assisting victims of nonconsensual image sharing and introduces a new regime of online censorship.
+*   The CoinTelegraph article titled "EU to ban anonymous crypto accounts and privacy coins by 2027" announces that the **European Union** is set to implement sweeping new Anti-Money Laundering (AML) regulations beginning in 2027. These rules will **ban privacy-preserving tokens and anonymous cryptocurrency accounts** as part of a broader AML framework targeting service providers and token anonymity.
+*   The excerpt from the POLITICO article titled "GOP reverses move to consolidate antitrust at DOJ" only includes header information and related links but does not contain any details about the content regarding the GOP's decision on antitrust consolidation at the DOJ. Therefore, the main topic of the article cannot be summarized from this source.
+*   The Decrypt article titled "Here’s a Closer Look at Meta’s New Standalone AI App" reviews **Meta's new standalone Meta AI assistant app**, powered by the Llama 4 model, which is available on iOS, Android, and desktop platforms. Key features noted include high-definition image/video generation, customizable AI voices, integration with Meta's smart glasses, and a Discovery tab to view and share AI-generated content, though it notes images are shared by default unless settings are changed.
+*   The Decrypt article titled "Miden Spins Out From Polygon Labs, Raises $25M to Launch Own Chain" reports that the **zero-knowledge blockchain protocol Miden** has spun out from Polygon Labs after successfully raising **$25 million** in a funding round led by a16z crypto, 1kx, and Hack VC. The funding will be used for Miden's mainnet launch, early adopter incentives, and team expansion, with plans to rival platforms like Solana and Aptos by offering privacy-preserving transactions.
+*   The excerpt from the Salon.com article titled "Morgan Stanley, Charles Schwab Corp. to offer crypto trading" primarily details **Trump Media & Technology's plans to offer Bitcoin ETFs** through its new financial services firm, Truth.Fi. It also mentions a reported $2 billion business deal involving digital coins from a Trump family crypto business and Eric Trump's opinion that the traditional banking system is "antiquated". Note: Information about Morgan Stanley or Charles Schwab offering crypto trading is not present in the provided excerpt.
+*   The Decrypt article titled "OpenAI Rolls Back ChatGPT Update After User Pushback Over ‘Sycophantic’ Behavior" reports that **OpenAI reversed a recent ChatGPT update** due to user criticism that the AI had become "overly flattering or agreeable—often described as sycophantic". OpenAI stated they over-relied on short-term feedback and plans to introduce more user control over personality and tone in the future.
+*   The CoinTelegraph article titled "Pro-crypto Democrats pull support for stablecoin bill in last minute" reports that a group of **nine US Senate Democrats**, previously supportive of the crypto industry, have announced they will **oppose a Republican-led stablecoin bill** in its current form. They stated the bill requires "numerous issues that must be addressed" and their opposition threatens its chance of passing.
+*   The CoinTelegraph article titled "Pro-crypto senator pushes back on Trump's memecoin dinner — Report" states that **Senator Cynthia Lummis** and at least one other Republican member of Congress are reportedly **critical of President Donald Trump** for offering a dinner and White House tour to top holders of his memecoin. Senator Lummis expressed that the reward for memecoin holders "gives [her] pause".
+*   The Decrypt article titled "Public Keys: Strategy Doubles Down on Bitcoin Plans, Robinhood Glitters With Gold" covers public crypto companies, detailing Strategy's "42-42 Capital Plan" focusing on Bitcoin despite a recent quarterly loss. It also highlights **Robinhood Gold's success in generating net deposits** for the trading platform.
+*   The Decrypt article titled "Secret Reddit Experiment Using AI Personas Sparks Ethics Scandal in Academia" describes a covert experiment by University of Zurich researchers who used **AI bots posing as human personas on Reddit** to attempt to change users' opinions on controversial topics. Reddit moderators and legal counsel vehemently condemned the experiment as deeply wrong, unethical, and a violation of academic norms, human rights norms, and Reddit's rules due to the deception and lack of consent.
+*   The CryptoSlate article titled "Vitalik Buterin wants to make Ethereum ‘as simple as Bitcoin’ by 2030" discusses **Ethereum co-founder Vitalik Buterin's goal to significantly simplify Ethereum** by reducing its consensus-critical code to enhance resilience, aiming for it to become close to as simple as Bitcoin by 2030. His proposed path involves implementing a "beam chain" for faster finality and simpler concepts, reducing active validators, integrating STARK-based aggregation, and standardizing protocols across layers.
+*   The excerpts from the Bitcoinist.com article titled "Why Ethereum’s Latest Bounce Could Signal The Start Of A New Bull Run" include navigational elements, price data, and author information but do not contain any content discussing the reasons behind Ethereum's recent price movement or its potential to signal a new bull run. Therefore, the main topic of the article cannot be summarized from these sources.
+*   The CoinDesk article titled "World Liberty’s USD1 Will Integrate With Tron; WLFI's Witkoff Teases More Partnerships" reports that **World Liberty Financial's stablecoin, USD1**, has been chosen for MGX's $2 billion investment in Binance and is set to **integrate with the Tron ecosystem**. World Liberty co-founder Zach Witkoff mentioned plans for further DeFi integrations and aiming to establish USD1 as a preferred stablecoin in both DeFi and CeFi ecosystems.
+
+- In a significant blow to Apple's business model, a federal judge ruled that the company violated an antitrust order by restricting developers from linking to alternative payment systems in their apps. The decision, which could potentially upend Apple's lucrative App Store commission, comes after a long-standing dispute between Apple and developers such as Epic Games and Spotify, who have accused the tech giant of using its power to stifle competition. ([Wall Street Journal](https://www.wsj.com/tech/apple-app-store-lawsuit-tim-cook-legacy-869c2acf?st=m4vmwY&reflink=desktopwebshare_permalink))
+
+- A US judge has ruled that Apple violated an order to reform the App Store, which could have significant implications for the company's business model. For more information, check out the full article here. ([Reuters](https://www.reuters.com/sustainability/boards-policy-regulation/us-judge-rules-apple-violated-order-reform-app-store-2025-04-30/))
+
 - Apple has revised its App Store guidelines to allow developers to include links to external payment methods, potentially paving the way for a new wave of crypto and NFT-related apps on the U.S. App Store. This change comes after a court ruling in favor of Epic Games, which had sued Apple over its commission fees on in-app purchases. ([The Block](https://www.theblock.co/post/353047/u-s-app-store-to-allow-apps-to-skirt-30-fee-on-nft-crypto-sales-following-apples-legal-defeat))
 
 - AdTech firm Thumzup Media Corporation is seeking to raise $200 million to bolster its bitcoin treasury, which currently holds around $1.8 million worth of bitcoin. This move is part of a growing trend of companies mirroring similar strategy-inspired plays, with Thumzup's market cap of around $48.5 million, as reported in a recent SEC filing, making it a notable example in the crypto space. ([The Block](https://www.theblock.co/post/353043/adtech-firm-thumzup-seeks-200-million-to-100x-size-of-bitcoin-treasury))
 
-- U.S. bank regulations on crypto relaxed. <!-- Link TK -->
 
-- 21Shares updates <!-- Link TK -->
+<!--
+
+Links below were have all been copied into NotebookLM's training data. But saving here as well for now, just in case...
+
+- U.S. bank regulations on crypto relaxed.
+
+- 21Shares updates
 
 - https://www.theblock.co/post/352384/nasdaq-submits-21shares-dogecoin-etf-listing-proposal
 
@@ -62,6 +98,8 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 - https://www.politico.com/newsletters/digital-future-daily/2025/04/29/a-tech-law-just-passed-could-it-happen-again-00316428
 
 - https://www.eff.org/deeplinks/2025/04/congress-passes-take-it-down-act-despite-major-flaws
+
+-->
 
 ### Looking Ahead
 
